style: fix edit button ios

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -19,7 +19,6 @@
 
 @media screen and (max-width: 768px) {
   .profile__edit-button {
-    width: 17px;
-    height: 17px;
+    padding: 8px 8px;
   }
 }
